[gd_scene load_steps=7 format=3 uid="uid://d1jvxhgsevlub"]

[ext_resource type="Script" path="res://scripts/bubble.gd" id="1_mrpbr"]
[ext_resource type="PackedScene" uid="uid://d3r2plysd45dh" path="res://sounds/pop.tscn" id="2_ppd3l"]
[ext_resource type="PackedScene" uid="uid://clvycomtapab6" path="res://img/bubble.aseprite" id="2_ufo0f"]
[ext_resource type="Shader" path="res://shaders/hsv-shader.gdshader" id="3_fowgt"]

[sub_resource type="CircleShape2D" id="CircleShape2D_gtchb"]
radius = 20.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_omh32"]
shader = ExtResource("3_fowgt")
shader_parameter/hue_shift = 0.558
shader_parameter/sat_mul = 1.0
shader_parameter/val_mul = 1.0

[node name="Bubble" type="Area2D"]
collision_layer = 4
collision_mask = 3
script = ExtResource("1_mrpbr")
pop_sound = ExtResource("2_ppd3l")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_gtchb")

[node name="bubble" parent="." instance=ExtResource("2_ufo0f")]
material = SubResource("ShaderMaterial_omh32")
autoplay = "shimmer"
frame_progress = 0.134247

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="RespawnTimer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="RespawnTimer" to="." method="_on_respawn_timer_timeout"]
